# internship-task-virose

./: CMakeLists.txt  motion_movie.cpp  motion_movie.h  motion_unit.cpp  tugas_2.cpp
FP-1/FinalProjek/Receiver/src/: main.cpp
FP-1/FinalProjek/Transmitter/src/: main.cpp  main.h  utility.cpp
FP-1/FinalProjek/Webots/controllers/controller-fp/: CMakeLists.txt  controller-fp.cpp
FP-1/FinalProjek/Webots/controllers/pose_controller/: pose_controller.py
FP-1/FinalProjek/Webots/poses/: pose-belok-kanan.json  pose-belok-kiri.json  pose-geser-kanan.json  pose-geser-kiri.json
TASK 2/: CMakeLists.txt  motion_movie.cpp  motion_movie.h  motion_unit.h
TASK 3/: README.md  Task3.cpp
TASK 4 /: README.md
task 1/: t1-1.cpp  t1-2.cpp
